<resources>
    <string name="app_name">Unidad3_Ejercicio1</string>
    <string name="login">Login</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="acceder">Acceder</string>
    <string name="acceso">Acceso</string>
    <string name="zona_2">Zona 2</string>
    <string name="zona_1">Zona 1</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
</resources>